fixed gap on mobile

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -21,6 +21,13 @@ $color-grey-dark-2: rgb(216, 128, 27);
     box-sizing: inherit;
 }
 
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  }
+
+
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
